--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
 <script src="bower_components/cesiumjs/Cesium/Cesium.js"></script>
+<script src="bower_components/lodash/lodash.min.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
