Changed demo site layout

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,8 @@
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-material/angular-material.min.js"></script>
 <script src="app/app.js"></script>
-<script src="app/views/view1/view1.js"></script>
-<script src="app/views/view2/view2.js"></script>
+<script src="app/views/cesiumUpAndRunning/view1.js"></script>
+<script src="app/views/polygonDrawer/view2.js"></script>
 <script src="app/views/view3/view3.js"></script>
 <script src="app/components/ngCesium/ngCesiumFilter/ngCesiumFilter.js"></script>
 <script src="app/components/ngCesium/ngCesiumPolygonDrawer/ngCesiumPolygonDrawer.js"></script>
