--- a/src/index-async.html
+++ b/src/index-async.html
@@ -32,7 +32,7 @@
       'bower_components/angular-route/angular-route.js',
       'app.js',
       'view1/view1.js',
-      'view2/view2.js',
+      'polygonDrawer/view2.js',
       'components/version/version.js',
       'components/version/version-directive.js',
       'components/version/interpolate-filter.js'
