--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-    <link rel="stylesheet" href="bower_components/cesium/Cesium/Widgets/widgets.css">
+    <link rel="stylesheet" href="app/components/ngEcho/ngEcho.css">
+    <link rel="stylesheet" href="app/components/ngEcho/ngEchoButtons/ngEchoButtons.css">
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="styles/app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
@@ -37,19 +38,16 @@
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
-<script src="bower_components/cesiumjs/CesiumUnminified/Cesium.js"></script>
 <script src="bower_components/lodash/lodash.min.js"></script>
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/d3/d3.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-material/angular-material.min.js"></script>
 <script src="app/app.js"></script>
-<script src="app/views/cesiumUpAndRunning/view1.js"></script>
-<script src="app/views/polygonDrawer/view2.js"></script>
 <script src="app/views/view3/view3.js"></script>
-<script src="app/components/ngCesium/ngCesiumFilter/ngCesiumFilter.js"></script>
-<script src="app/components/ngCesium/ngCesiumPolygonDrawer/ngCesiumPolygonDrawer.js"></script>
-<script src="app/components/ngCesium/ngCesium.js"></script>
+<script src="app/components/ngEcho/ngEcho.js"></script>
+<script src="app/components/ngEcho/ngEchoButtons/ngEchoButtons.js"> </script>
 </body>
 </html>
