--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="app/components/ngEcho/ngEcho.css">
     <link rel="stylesheet" href="app/components/ngEcho/ngEchoButtons/ngEchoButtons.css">
+    <link rel="stylesheet" href="app/components/ngEcho/ngEchoHeader/ngEchoHeader.css">
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="styles/app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
@@ -49,5 +50,6 @@
 <script src="app/views/view3/view3.js"></script>
 <script src="app/components/ngEcho/ngEcho.js"></script>
 <script src="app/components/ngEcho/ngEchoButtons/ngEchoButtons.js"> </script>
+<script src="app/components/ngEcho/ngEchoHeader/ngEchoHeader.js"> </script>
 </body>
 </html>
