--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="app/components/ngEcho/ngEcho.css">
     <link rel="stylesheet" href="app/components/ngEcho/ngEchoButtons/ngEchoButtons.css">
     <link rel="stylesheet" href="app/components/ngEcho/ngEchoForm/ngEchoForm.css">
+    <link rel="stylesheet" href="app/components/ngEcho/ngEchoHeader/ngEchoHeader.css">
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="styles/app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
@@ -51,5 +52,6 @@
 <script src="app/components/ngEcho/ngEcho.js"></script>
 <script src="app/components/ngEcho/ngEchoButtons/ngEchoButtons.js"> </script>
 <script src="app/components/ngEcho/ngEchoForm/ngEchoForm.js"> </script>
+<script src="app/components/ngEcho/ngEchoHeader/ngEchoHeader.js"> </script>
 </body>
 </html>
