Added a div for the test application

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="bower_components/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="styles/app.css">
+    <link rel="stylesheet" href="app/views/viewAutoForceLayout/viewAutoForceLayout.css">
     <link rel="stylesheet" href="app/components/autoForceLayout/autoForceLayout.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
