Rename: Force Horse (cont.)

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AutoForceLayout app</title>
+    <title>ForceHorse demo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="bower_components/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="styles/app.css">
-    <link rel="stylesheet" href="app/views/viewAutoForceLayout/viewAutoForceLayout.css">
-    <link rel="stylesheet" href="app/components/autoForceLayout/autoForceLayout.css">
+    <link rel="stylesheet" href="app/views/viewForceHorse/viewForceHorse.css">
+    <link rel="stylesheet" href="app/components/forceHorse/forceHorse.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body layout="column">
@@ -47,8 +47,8 @@
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-material/angular-material.min.js"></script>
 <script src="app/app.js"></script>
-<script src="app/views/viewAutoForceLayout/viewAutoForceLayout.js"></script>
-<script src="app/components/autoForceLayout/autoForceLayout.js"></script>
+<script src="app/views/viewForceHorse/viewForceHorse.js"></script>
+<script src="app/components/forceHorse/forceHorse.js"></script>
 
 </body>
 </html>
