--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,14 @@
     <title>ForceHorse demo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-    <link rel="stylesheet" href="bower_components/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
+    <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
+    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="../bower_components/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="styles/app.css">
     <link rel="stylesheet" href="app/views/viewForceHorse/viewForceHorse.css">
     <link rel="stylesheet" href="app/components/forceHorse/forceHorse.css">
-    <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body layout="column">
 
@@ -39,13 +39,13 @@
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
-<script src="bower_components/lodash/lodash.min.js"></script>
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/d3/d3.min.js"></script>
-<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script src="bower_components/angular-animate/angular-animate.min.js"></script>
-<script src="bower_components/angular-aria/angular-aria.min.js"></script>
-<script src="bower_components/angular-material/angular-material.min.js"></script>
+<script src="../bower_components/lodash/lodash.min.js"></script>
+<script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/d3/d3.min.js"></script>
+<script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="../bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="../bower_components/angular-aria/angular-aria.min.js"></script>
+<script src="../bower_components/angular-material/angular-material.min.js"></script>
 <script src="app/app.js"></script>
 <script src="app/views/viewForceHorse/viewForceHorse.js"></script>
 <script src="app/components/forceHorse/forceHorse.js"></script>
