Refactoting: moved components dir to root

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../bower_components/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="styles/app.css">
     <link rel="stylesheet" href="app/views/viewForceHorse/viewForceHorse.css">
-    <link rel="stylesheet" href="app/components/forceHorse/forceHorse.css">
+    <link rel="stylesheet" href="../components/forceHorse/forceHorse.css">
     <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body layout="column">
@@ -48,7 +48,7 @@
 <script src="../bower_components/angular-material/angular-material.min.js"></script>
 <script src="app/app.js"></script>
 <script src="app/views/viewForceHorse/viewForceHorse.js"></script>
-<script src="app/components/forceHorse/forceHorse.js"></script>
+<script src="../components/forceHorse/forceHorse.js"></script>
 
 </body>
 </html>
