--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="../bower_components/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="styles/app.css">
+    <link rel="stylesheet" href="app/styles/app.css">
     <link rel="stylesheet" href="app/views/viewForceHorse/viewForceHorse.css">
     <link rel="stylesheet" href="../components/forceHorse/forceHorse.css">
     <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
