--- a/simple-demo-app/index.html
+++ b/simple-demo-app/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../components/forceHorse/forceHorse.css">
     <link rel="stylesheet" href="demo.css">
     <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/d3/d3.min.js"></script>
+    <script src="../bower_components/d3/d3.js"></script>
 </head>
 <body ng-controller="demoCtrl as demoCtrl">
 <div id="wrapper">
