--- a/demo/index.html
+++ b/demo/index.html
@@ -17,27 +17,47 @@
   </style>
 </head>
 <body>
-<force-horse options='{
-  "data": {
-    "nodes": [
-      {"label": "Captain Sisko"},
-      {"label": "Major Kira"},
-      {"label": "Dr Bashir"},
-      {"label": "Gol Dookat"},
-      {"label": "Vedek Beriel"},
-      {"label": "Vedek X"},
-      {"label": "Garek"}
+<force-horse></force-horse>
+
+<script>
+  const instance = document.querySelector('force-horse');
+  instance.setConfig({
+    'showButtons': true,
+    'showLabels': true,
+    'showNodeWeight': true,
+    'showEdgeWeight': true,
+    'showFilterButton': true,
+    'showLabelsButton': true,
+    'showNodeWeightButton': true,
+    'showEdgeWeightButton': true,
+    'forceParameters': {
+      '#charge': -350,
+      '#linkStrength': 1,
+      '#gravity': 0.2,
+      '#linkDistance': 10,
+      '#friction': 0.5
+    }
+  });
+  instance.setData({
+    'nodes': [
+      {'label': 'Captain Sisko'},
+      {'label': 'Major Kira'},
+      {'label': 'Dr Bashir'},
+      {'label': 'Gol Dookat'},
+      {'label': 'Vedek Beriel'},
+      {'label': 'Vedek X'},
+      {'label': 'Garek'}
     ],
-    "links": [
-      {"source": 0, "target": 1, "weight": 3},
-      {"source": 0, "target": 2, "weight": 3},
-      {"source": 0, "target": 3, "weight": 3},
-      {"source": 1, "target": 4},
-      {"source": 1, "target": 5},
-      {"source": 2, "target": 6},
-      {"source": 3, "target": 6}
+    'links': [
+      {'source': 0, 'target': 1, 'weight': 3},
+      {'source': 0, 'target': 2, 'weight': 3},
+      {'source': 0, 'target': 3, 'weight': 3},
+      {'source': 1, 'target': 4},
+      {'source': 1, 'target': 5},
+      {'source': 2, 'target': 6},
+      {'source': 3, 'target': 6}
     ]
-  }
-}'></force-horse>
+  });
+</script>
 </body>
 </html>
