fix(selection): mark svg with class

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,7 +62,7 @@
     ]
   });
 
-  instance.viewer.selectEvent.subscribe((...d) => console.log(...d));
+  //instance.viewer.selectEvent.subscribe((...d) => console.log(...d));
 </script>
 </body>
 </html>
